fixed overflow bug in Details section of Landing page

--- a/src/pages/landing/Landing.css
+++ b/src/pages/landing/Landing.css
@@ -121,7 +121,7 @@
 .details-section {
   margin-top: -5rem;
   padding-top: 10rem;
-  height: 90vh;
+  /* height: 90vh; */
   background: var(--clr-primary-30);
   position: relative;
 }
